[gd_scene load_steps=4 format=3 uid="uid://dttilbxjeicdx"]

[ext_resource type="Theme" uid="uid://5ovu4gos36og" path="res://2d/assets/themes/transparent.tres" id="1"]
[ext_resource type="Theme" uid="uid://fr1lin3sbs06" path="res://2d/assets/themes/transparent-static.tres" id="2"]
[ext_resource type="Script" path="res://2d/source/scripts/main_menu/main_menu_buttons.gd" id="3"]

[node name="Node2" type="Node2D"]
script = ExtResource("3")

[node name="GameDataPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 101.0
offset_top = 293.0
offset_right = 355.0
offset_bottom = 560.0
theme = ExtResource("1")

[node name="GridContainer" type="GridContainer" parent="GameDataPanel"]
layout_mode = 0
anchor_top = 0.011
anchor_bottom = 0.232
offset_left = 7.0
offset_top = 6.755
offset_right = 247.0
offset_bottom = 215.56

[node name="GridContainer" type="GridContainer" parent="GameDataPanel/GridContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GameDataPanel/GridContainer/GridContainer"]
layout_mode = 2
text = "  Username "

[node name="UsernameLineEdit" type="LineEdit" parent="GameDataPanel/GridContainer/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../SpinBoxSavedID")
focus_next = NodePath("../SpinBoxSavedID")
max_length = 11
caret_blink = true
caret_blink_interval = 0.5

[node name="LabelGameID" type="Label" parent="GameDataPanel/GridContainer/GridContainer"]
layout_mode = 2
text = "Game ID "

[node name="SpinBoxSavedID" type="SpinBox" parent="GameDataPanel/GridContainer/GridContainer" groups=["spinbox"]]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_top = NodePath("../UsernameLineEdit")
focus_previous = NodePath("../UsernameLineEdit")
focus_mode = 2
theme = ExtResource("2")
max_value = 20.0
rounded = true

[node name="ButtonNew" type="Button" parent="GameDataPanel/GridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../GridContainer/SpinBoxSavedID")
focus_previous = NodePath("../GridContainer/SpinBoxSavedID")
text = "New"

[node name="ButtonSave" type="Button" parent="GameDataPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="ButtonLoad" type="Button" parent="GameDataPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 15
text = "Load"

[node name="ButtonDelete" type="Button" parent="GameDataPanel/GridContainer"]
layout_mode = 2
text = "Delete"

[node name="ButtonPlay" type="Button" parent="GameDataPanel/GridContainer"]
layout_mode = 2
text = "Play"

[node name="EmptyUsernameDialog" type="AcceptDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")
dialog_autowrap = true

[node name="NoGameIDexists" type="AcceptDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")
dialog_autowrap = true

[node name="DeleteGameDialog" type="AcceptDialog" parent="."]
size = Vector2i(500, 119)
theme = ExtResource("2")
dialog_text = "Game ID deleted successfully."
dialog_autowrap = true

[node name="NoDataDialog" type="AcceptDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")
dialog_autowrap = true

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")

[node name="SavedConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")

[node name="NewConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("2")

[node name="MusicIntro" type="AudioStreamPlayer" parent="."]

[connection signal="text_changed" from="GameDataPanel/GridContainer/GridContainer/UsernameLineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="value_changed" from="GameDataPanel/GridContainer/GridContainer/SpinBoxSavedID" to="." method="_on_saved_ID_spinBox_value_changed"]
[connection signal="pressed" from="GameDataPanel/GridContainer/ButtonNew" to="." method="_on_ButtonNew_pressed"]
[connection signal="pressed" from="GameDataPanel/GridContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="GameDataPanel/GridContainer/ButtonLoad" to="." method="_on_ButtonLoad_pressed"]
[connection signal="pressed" from="GameDataPanel/GridContainer/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="GameDataPanel/GridContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="confirmed" from="NoDataDialog" to="." method="_on_NoDataDialog_confirmed"]
[connection signal="confirmed" from="SaveConfirmationDialog" to="." method="_on_SaveConfirmationDialog_confirmed"]
[connection signal="confirmed" from="SavedConfirmationDialog" to="." method="_on_SavedConfirmationDialog_confirmed"]
[connection signal="confirmed" from="NewConfirmationDialog" to="." method="_on_new_confirmation_dialog"]
